--- a/runningtracker/frontend/templates/index.html
+++ b/runningtracker/frontend/templates/index.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Hello, world!</title>
-        <script type="text/javascript" src="{{ url_for('frontend.static', filename='js/index.js') }}"></script>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('frontend.static', filename='css/index.css') }}" />
-    </head>
-    <body>
-        <p>Hello, world!</p>
-    </body>
-</html>
+{% extends 'bootstrap/base.html' %}
+
+{% block title %}
+    Hello, world!
+{% endblock %}
+
+{% block navbar %}
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">running-tracker</a>
+    </nav>
+{% endblock %}
+
+{% block content %}
+    <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4">Hello, world!</h1>
+    </div>
+{% endblock %}
