Start trend methods

--- a/runningtracker/frontend/templates/index.html
+++ b/runningtracker/frontend/templates/index.html
@@ -11,7 +11,9 @@
 {% endblock %}
 
 {% block content %}
-    <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4">Hello, world!</h1>
-    </div>
+    {% block row %}
+        <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+            <h1 class="display-4">Hello, world!</h1>
+        </div>
+    {% block row %}
 {% endblock %}
