Work on frontend component

--- a/runningtracker/frontend/templates/base.html
+++ b/runningtracker/frontend/templates/base.html
@@ -47,7 +47,9 @@
     <!-- not closing container-fluid row -->
 {% endblock %}
 
+<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
 {% block content %}
     BASE_TEMPLATE
 {% endblock %}
+</main>
 </div>  <!-- end container-fluid row -->
