--- a/runningtracker/frontend/templates/index.html
+++ b/runningtracker/frontend/templates/index.html
@@ -5,9 +5,10 @@
 {% endblock %}
 
 {% block content %}
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-        <div class="px-3 py-3 pb-md-4 mx-auto text-center">
-            <h1 class="display-4">Hello, world!</h1>
-        </div>
-    </main>
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+        <h1 class="h2">Dashboard</h1>
+    </div>
+    <div class="px-3 py-3 pb-md-4 mx-auto text-center">
+        <h1 class="display-4">Hello, world!</h1>
+    </div>
 {% endblock %}
