--- a/runningtracker/frontend/templates/index.html
+++ b/runningtracker/frontend/templates/index.html
@@ -5,10 +5,14 @@
 {% endblock %}
 
 {% block content %}
-    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-        <h1 class="h2">Dashboard</h1>
-    </div>
-    <div class="px-3 py-3 pb-md-4 mx-auto text-center">
-        <h1 class="display-4">Hello, world!</h1>
+    <div class="col-md-10">
+        <p>
+            <a href="#dashboard"></a>
+            <h1 class="display-5">Dashboard</h1>
+        </p>
+        <p>
+            <a href="#historical-data"></a>
+            <h1 class="display-5">Historical data</h1>
+        </p>
     </div>
 {% endblock %}
