Load dashboard and historical data templates in index page

--- a/runningtracker/frontend/templates/index.html
+++ b/runningtracker/frontend/templates/index.html
@@ -9,10 +9,12 @@
         <p>
             <a href="#dashboard"></a>
             <h1 class="display-5">Dashboard</h1>
+            {% include 'dashboard.html' %}
         </p>
         <p>
             <a href="#historical-data"></a>
             <h1 class="display-5">Historical data</h1>
+            {% include 'historical_data.html' %}
         </p>
     </div>
 {% endblock %}
